// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtilizationBar with custom tooltips renders properly 1`] = `
<div
  class="utilization-bar-pf"
>
  <div
    class="progress-bar"
  />
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      class="progress-bar"
      role="progressbar"
      style="width: 60%;"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="progress-bar progress-bar-remaining"
      role="progressbar"
      style="width: 40%;"
    />
  </div>
</div>
`;

exports[`UtilizationBar with thresholds renders properly 1`] = `
<div
  class="utilization-bar-pf"
>
  <div
    class="progress-bar"
  />
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      class="progress-bar progress-bar-danger"
      role="progressbar"
      style="width: 60%;"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="progress-bar progress-bar-remaining"
      role="progressbar"
      style="width: 40%;"
    />
  </div>
</div>
`;

exports[`basic UtilizationBar renders properly 1`] = `
<div
  class="utilization-bar-pf"
>
  <div
    class="progress-bar"
  />
  <div
    class="progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      class="progress-bar"
      role="progressbar"
      style="width: 60%;"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="progress-bar progress-bar-remaining"
      role="progressbar"
      style="width: 40%;"
    />
  </div>
</div>
`;
